<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/welcome"
    android:background="@color/gray"
    android:gravity="center"
    android:orientation="vertical">
    <TextView
        android:id="@+id/backgroundTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/backgroundText"
        android:textSize="20dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:onClick="selectColor"
            android:id="@+id/redBTN"
            android:text="@string/redBTNText" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:onClick="selectColor"
            android:id="@+id/blueBTN"
            android:text="@string/blueBTNText" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:onClick="selectColor"
            android:id="@+id/greenBTN"
            android:text="@string/greenBTNText" />
    </LinearLayout>
    <TextView
        android:id="@+id/greetingTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/greeting"
        android:textAlignment="center"
        android:textSize="20dp"
        android:gravity="center_horizontal" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal"
        android:id="@+id/beginBTN"
        android:text="BEGIN" />

</LinearLayout>